Resolutions to comments